<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".tutor.activity.TutorOrStudent">

    <TextView
        android:id="@+id/tvSignup"
        style="@style/signup_title_style"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="27dp"
        android:text="@string/sign_up" />

    <TextView
        style="@style/i_am_a"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/tvSignup"
        android:layout_marginTop="50dp"
        android:text="@string/i_am"
        />

    <Button
        android:id="@+id/btnTutor"
        style="@style/signup_title_style"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginStart="26dp"
        android:layout_marginEnd="26dp"
        android:layout_marginBottom="25dp"
        android:paddingTop="22dp"
        android:paddingBottom="20dp"
        android:background="@drawable/border_round_rect"
        android:text="@string/tutor"
         />

    <Button
        android:id="@+id/btnStudent"
        style="@style/signup_title_style"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/btnTutor"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="26dp"
        android:layout_marginEnd="26dp"
        android:paddingTop="22dp"
        android:paddingBottom="20dp"
        android:background="@drawable/border_round_rect"
        android:text="@string/student"
       />
</RelativeLayout>