<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/tvSignup"
        style="@style/signup_title_style"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:text="@string/sign_up" />

    <TextView
        android:id="@+id/tvPersonalVerification"
        style="@style/signup_second_title_style"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvSignup"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="23dp"
        android:background="@drawable/button_background_black"
        android:gravity="center"
        android:paddingStart="28dp"
        android:paddingTop="4dp"
        android:paddingEnd="29dp"
        android:paddingBottom="3dp"
        android:text="@string/personal_verification" />

    <ProgressBar
        android:id="@+id/pbSignupProgress"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_height="9dp"
        android:layout_below="@id/tvPersonalVerification"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="12dp"
        android:layout_marginTop="14dp"
        android:layout_marginEnd="12dp"
        android:max="8"
        android:progress="8"
        android:progressDrawable="@drawable/progress_drawable" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/pbSignupProgress"
        android:layout_marginStart="16dp"
        android:layout_marginTop="31dp"
        android:layout_marginEnd="16dp">

        <TextView
            android:id="@+id/tvCreatePackage"
            style="@style/title_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="@string/create_your_pack" />

        <TextView
            android:id="@+id/tvLastHint"
            style="@style/signup_general_hint_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tvCreatePackage"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="8dp"
            android:text="@string/last_hint" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tvLastHint"
            android:layout_marginTop="33dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/border_rectangle"
                android:paddingStart="10dp"
                android:paddingTop="7dp"
                android:paddingBottom="7dp"
                android:text="@string/package1" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/border_rectangle"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tvClassType"
                    style="@style/package_item_text_style"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="10dp"
                    android:background="@drawable/border_rectangle"
                    android:drawableEnd="@drawable/drop_down_arrow"
                    android:paddingStart="12dp"
                    android:paddingTop="6dp"
                    android:paddingEnd="12dp"
                    android:paddingBottom="6dp"
                    android:text="@string/class_type" />

                <TextView
                    android:id="@+id/tvClassNumber"
                    style="@style/package_item_text_style"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="10dp"
                    android:background="@drawable/border_rectangle"
                    android:drawableEnd="@drawable/drop_down_arrow"
                    android:paddingStart="12dp"
                    android:paddingTop="6dp"
                    android:paddingEnd="12dp"
                    android:paddingBottom="6dp"
                    android:text="@string/class_number" />

                <TextView
                    android:id="@+id/tvClassFreq"
                    style="@style/package_item_text_style"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="10dp"
                    android:background="@drawable/border_rectangle"
                    android:drawableEnd="@drawable/drop_down_arrow"
                    android:paddingStart="12dp"
                    android:paddingTop="6dp"
                    android:paddingEnd="12dp"
                    android:paddingBottom="6dp"
                    android:text="@string/class_frequency" />

                <TextView
                    android:id="@+id/tvMaxStudents"
                    style="@style/package_item_text_style"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="10dp"
                    android:background="@drawable/border_rectangle"
                    android:drawableEnd="@drawable/drop_down_arrow"
                    android:paddingStart="12dp"
                    android:paddingTop="6dp"
                    android:paddingEnd="12dp"
                    android:paddingBottom="6dp"
                    android:text="@string/specify_max_students"
                    android:visibility="gone" />

                <TextView
                    style="@style/package_item_text_style"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="10dp"
                    android:paddingTop="6dp"
                    android:paddingBottom="6dp"
                    android:text="@string/setup_rates"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/edtRate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="2dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginBottom="13dp"
                    android:background="@drawable/border_rectangle"
                    android:paddingStart="12dp"
                    android:paddingTop="6dp"
                    android:paddingEnd="12dp"
                    android:paddingBottom="6dp"
                    android:text="@string/rate"
                    android:textColor="@color/black"
                    android:textSize="13sp" />
            </LinearLayout>
        </LinearLayout>

    </RelativeLayout>

    <ImageButton
        android:id="@+id/btnNext"
        style="@style/next"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="27dp"
        android:layout_marginBottom="26dp"
        android:background="@drawable/next"
        android:contentDescription="@string/next" />

</RelativeLayout>
