<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".tutor.activity.TutorLogin">

    <TextView
        style="@style/s_small"
        android:id="@+id/tvS"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="12dp"
        android:padding="15dp"
        android:background="@drawable/border_round_rect"
        android:text="@string/s_" />

    <TextView
        android:id="@+id/tvLogin"
        style="@style/signup_general_hint_style"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/tvS"
        android:layout_marginTop="13dp"
        android:textAllCaps="true"
        android:textStyle="bold"
        android:text="@string/login_" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/tvLogin"
        android:layout_marginTop="36dp"
        android:layout_marginStart="14dp"
        android:layout_marginEnd="14dp" >

        <TextView
            android:id="@+id/tvWelcomeBack"
            style="@style/welcome_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="31dp"
            android:text="@string/welcome_back" />

        <TextView
            android:id="@+id/tvHintPassword"
            style="@style/signup_general_hint_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="35dp"
            android:layout_marginStart="30dp"
            android:text="@string/hint_password" />

        <LinearLayout
            android:id="@+id/edit_password_area"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="23dp"
            android:layout_marginStart="14dp"
            android:layout_marginEnd="14dp"
            android:layout_below="@+id/tvHintPassword"
            android:orientation="vertical">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/shadow_rect"
                app:passwordToggleContentDescription=""
                app:passwordToggleEnabled="true"
                app:passwordToggleTint="@color/colorAccent">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/edtPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"/>
            </android.support.design.widget.TextInputLayout>

            <TextView
                android:id="@+id/tvForgotPassword"
                style="@style/forgot_pass"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="14dp"
                android:layout_gravity="end"
                android:text="@string/forgot_pass"
                android:focusable="true"
                android:clickable="true" />
        </LinearLayout>
    </RelativeLayout>

    <Button
        android:id="@+id/btnLogin"
        style="@style/otp_next"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@drawable/button_background_red"
        android:text="@string/login"
        android:padding="10dp"
        android:gravity="end|center_vertical" />

</RelativeLayout>